# librequiemdb

./: HACKING.README  LICENSE.README  Makefile.am  README  configure.in  librequiemdb-config.in  requiemdb-admin.c
bindings/: Makefile.am  librequiemdb.i  librequiemdb_perl.i  librequiemdb_python.i
bindings/perl/: Makefile.PL.in  RequiemDB.pm
bindings/python/: requiemdb.py  setup.py.in
docs/api/: Makefile.am  librequiemdb-decl.txt  librequiemdb-docs.sgml  librequiemdb-sections.txt
docs/api/tmpl/: librequiemdb-unused.sgml  requiemdb-error.sgml  requiemdb-path-selection.sgml  requiemdb-plugin-format.sgml  requiemdb-plugin-sql.sgml  requiemdb-sql-settings.sgml  requiemdb-sql.sgml  requiemdb-version.sgml  requiemdb.sgml
docs/manpages/: Makefile.am  requiemdb-admin.1
libmissing/: vsnprintf.c
m4/: Makefile.am  librequiem.m4  librequiemdb.m4
plugins/format/classic/: Makefile.am  classic-delete.c  classic-get.c  classic-insert.c  classic-path-resolve.c  classic-sql-join.c  classic-sql-select.c  classic.c  mysql-update-14-1.sql  mysql-update-14-2.sql  mysql-update-14-3.sql  mysql-update-14-4.sql  mysql-update-14-5.sql  mysql-update-14-6.sql  mysql-update-14-7.sql  mysql.sql  pgsql-update-14-2.sql  pgsql-update-14-3.sql  pgsql-update-14-4.sql  pgsql-update-14-5.sql  pgsql-update-14-6.sql  pgsql-update-14-7.sql  pgsql.sql  sqlite-update-14-4.sql  sqlite-update-14-5.sql  sqlite.sql
plugins/format/classic/include/: classic-delete.h  classic-get.h  classic-insert.h  classic-path-resolve.h  classic-sql-join.h  classic-sql-select.h
plugins/sql/: Makefile.am
plugins/sql/mysql/: Makefile.am  mysql.c
plugins/sql/pgsql/: Makefile.am  pgsql.c
plugins/sql/sqlite3/: Makefile.am  sqlite3.c
src/: Makefile.am  requiemdb-error.c  requiemdb-path-selection.c  requiemdb-plugin-format.c  requiemdb-plugin-sql.c  requiemdb-sql-settings.c  requiemdb-sql.c  requiemdb-version.c  requiemdb.c
src/include/: Makefile.am  requiemdb-error.h  requiemdb-path-selection.h  requiemdb-plugin-format-prv.h  requiemdb-plugin-format.h  requiemdb-plugin-sql.h  requiemdb-sql-settings.h  requiemdb-sql.h  requiemdb-version.h.in  requiemdb.h
