includedir = $(prefix)/include/librequiemdb

include_HEADERS = 			\
	requiemdb-path-selection.h	\
	requiemdb-plugin-sql.h		\
	requiemdb-plugin-format.h	\
	requiemdb-sql-settings.h	\
	requiemdb-sql.h			\
	requiemdb-version.h		\
	requiemdb-error.h		\
	requiemdb.h

nodist_include_HEADERS = requiemdb-version.h
noinst_HEADERS = requiemdb-plugin-format-prv.h

-include $(top_srcdir)/git.mk
